# fastapi-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/db/models/: user.py
app/repositories/: base_repository.py  user_repository.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  bootstrap_service.py  user_service.py
tests/: conftest.py  test_health.py
tests/api/: test_auth.py  test_users.py
tests/services/: test_auth_service.py  test_bootstrap_service.py
